jade/assets/stylesheets/style.css
@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);

/* general stuff */
html body {
      font-family: 'Roboto', sans-serif;
      font-size: 16px;
}

.container-fluid{
    margin:0;
    padding-top: 200px;
    height: 100%;
    margin-bottom:30px;
}

p {
    margin-left: 40px;
    margin-right:40px;
}

#headerurl{
    color: white;
}

.text-left-title {
    padding-left: 40px;
    padding-top: 60px;
    font-size: 28px;
}

.text-left-title a {
        color: white;
}

/*basic header */
#header {
    position: fixed;
    background-color: #1e90ff;
    color: #ffffff;
    width: 100%;
    height: 200px;
    margin: 0;
}

.blogtitle {
font-size: 55px;
padding-top: 90px;
margin-left: 15%;
width: 150%;
}

#header img {
    width: 100%;
    height:200px;
    overflow: hidden;
}
/* question mark - about this theme */
#about {
    position: fixed;
    right: 10px;
    top: 10px;
}

#backtotop{
    position:absolute;
}

/* home page look and feel */
.row {
  margin-left: 15%;
  margin-right:15%;
}

/* modal stuff */
.modal-post {
    background-color: #1e90ff;
    color: #ffffff;
    height: 100px;
     margin-top:15px;
    overflow: hidden;
}

.postdate {
    color:grey;
    font-size: 18px;
}

hr {
        margin-bottom: 65px;
        border-width: 3px;
        color: #708090;
}

/* read more link */
.readmore {
    color: #fff;
    background-color: #1e90ff;
      padding: 10px;
      text-align: center;
      width: 100%;
}

.readmore:hover {
    text-decoration: none;
    color: #fff;
}

.postfooter{
    background: #1e90ff;
    padding-top: 10px;
    padding-bottom: 10px;
    color: white;
    text-align: center;
}

.older-posts {
    border-bottom: 1px solid #1e90ff;
      color: #00A329;
      padding: 10px;
}

.older-posts:hover {
        color: #fff;
        background-color: #00bfff;
}

.newer-posts {
    border-bottom: 1px solid #1e90ff;
      color: #00A329;
      padding: 10px;
}

.newer-posts:hover {
        color: #fff;
        background-color: #00bfff;
}


/* dont expand images too far in excerpt */
.box-main img {
    width: 100%;
}

#pagination {
    text-align: center;
    bottom: 0;
}

